incorrect "edit" icon, margin for minicart-items-wrapper,qty input fix, update button misalignment, padding foreach cart items, "see details" arrow

--- a/web/css/_variables.scss
+++ b/web/css/_variables.scss
@@ -119,7 +119,7 @@ $accordion-content__padding: $indent__s $indent__s $indent__l;
 
 $icon-success: '\e60e';
 $icon-error: '\e61f';
-$icon-edit: '\e601';
+$icon-edit: '\e606';
 $icon-print: '\e624';
 $icon-star-empty: '\e625';
 $icon-download: '\e626';
